<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_bg"
    android:orientation="vertical">

    <include layout="@layout/toolbar_view" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/tab_height"
        android:layout_marginBottom="@dimen/auto_space"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_marginTop="@dimen/icon_size"
        android:background="@drawable/white_rectangle_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/fab_margin"
            android:text="@string/change_password_old"
            android:textSize="@dimen/text_size_middle" />

        <EditText
            android:id="@+id/change_password_old"
            style="@style/edit_view_style"
            android:hint="@string/change_password_old_hint"
            android:inputType="textPassword"
            android:maxLength="16"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/tab_height"
        android:layout_marginBottom="@dimen/auto_space"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:background="@drawable/white_rectangle_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/fab_margin"
            android:text="@string/change_password_new"
            android:textSize="@dimen/text_size_middle" />

        <EditText
            android:id="@+id/change_password_new"
            style="@style/edit_view_style"
            android:hint="@string/change_password_new_hint"
            android:inputType="textPassword"
            android:maxLength="16" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/tab_height"
        android:layout_marginBottom="@dimen/auto_space"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:background="@drawable/white_rectangle_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/fab_margin"
            android:text="@string/register_password_comfirm"
            android:textSize="@dimen/text_size_middle" />

        <EditText
            android:id="@+id/register_password_comfirm"
            style="@style/edit_view_style"
            android:hint="@string/register_password_comfirm_hint"
            android:inputType="textPassword"
            android:maxLength="16" />

    </LinearLayout>

    <Button
        android:id="@+id/button_login"
        style="@style/submit_button"
        android:background="@drawable/red_btn_bg"
        android:layout_marginTop="@dimen/auto_space"
        android:onClick="onClick"
        android:text="@string/button_sure" />

</LinearLayout>