<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_bg"
    android:orientation="vertical">

    <include layout="@layout/toolbar_view" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/tab_height"
        android:layout_marginBottom="@dimen/auto_space"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_marginTop="@dimen/icon_size"
        android:background="@drawable/white_rectangle_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/fab_margin"
            android:text="@string/register_phone"
            android:textSize="@dimen/text_size_middle" />

        <EditText
            android:id="@+id/register_phone"
            style="@style/edit_view_style"
            android:hint="@string/register_phone_hint"
            android:inputType="phone"
            android:maxLength="13" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/tab_height"
        android:layout_marginBottom="@dimen/auto_space"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/tab_height"
            android:layout_weight="1"
            android:background="@drawable/white_rectangle_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/fab_margin"
                android:text="@string/register_code"
                android:textSize="@dimen/text_size_middle" />

            <EditText
                android:id="@+id/register_code"
                style="@style/edit_view_style"
                android:inputType="numberSigned"
                android:hint="@string/register_code_hint"
                android:maxLength="8" />

        </LinearLayout>

        <net.kamfat.omengo.component.GetCodeView
            android:id="@+id/button_get_code"
            android:layout_width="@dimen/goods_size"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/auto_space"
            android:background="@drawable/main_corner_btn"
            android:gravity="center"
            android:onClick="onClick"
            android:text="@string/button_get_code"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_middle" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/tab_height"
        android:layout_marginBottom="@dimen/auto_space"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:background="@drawable/white_rectangle_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/fab_margin"
            android:text="@string/register_password"
            android:textSize="@dimen/text_size_middle" />

        <EditText
            android:id="@+id/register_password"
            style="@style/edit_view_style"
            android:hint="@string/register_password_hint"
            android:inputType="textPassword"
            android:maxLength="16" />

    </LinearLayout>

    <Button
        android:id="@+id/button_register"
        style="@style/submit_button"
        android:background="@drawable/main_corner_btn"
        android:onClick="onClick"
        android:layout_marginTop="@dimen/auto_space"
        android:text="@string/button_sure" />

</LinearLayout>