<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_bg"
    android:orientation="vertical">

    <include layout="@layout/toolbar_view" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/tab_height"
        android:layout_marginBottom="@dimen/auto_space"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_marginTop="@dimen/icon_size"
        android:background="@drawable/white_rectangle_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/fab_margin"
            android:text="@string/login_name"
            android:textSize="@dimen/text_size_middle" />

        <EditText
            android:id="@+id/login_name"
            style="@style/edit_view_style"
            android:hint="@string/login_name_hint" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/tab_height"
        android:layout_marginBottom="@dimen/auto_space"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:background="@drawable/white_rectangle_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/fab_margin"
            android:text="@string/register_password"
            android:textSize="@dimen/text_size_middle" />

        <EditText
            android:id="@+id/login_password"
            style="@style/edit_view_style"
            android:hint="@string/register_password_hint"
            android:inputType="textPassword"
            android:maxLength="16" />

    </LinearLayout>

    <Button
        android:id="@+id/button_login"
        style="@style/submit_button"
        android:background="@drawable/main_corner_btn"
        android:layout_marginTop="@dimen/auto_space"
        android:onClick="onClick"
        android:text="@string/button_login" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/auto_space"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/button_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_now"
            android:onClick="register"
            android:background="@drawable/item_transparent_pressed_bg"
            android:padding="@dimen/auto_space"/>

        <View
            android:layout_width="@dimen/view_space"
            android:layout_height="@dimen/big_icon_size"
            android:background="@color/division_line_color"
            android:layout_centerInParent="true" />

        <TextView
            android:id="@+id/button_findpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:onClick="findpassword"
            android:background="@drawable/item_transparent_pressed_bg"
            android:layout_alignParentRight="true"
            android:padding="@dimen/auto_space"/>
    </RelativeLayout>

</LinearLayout>