<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_bg"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_view" />

    <RelativeLayout
        android:id="@+id/balance_password_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/auto_space"
        android:layout_below="@id/toolbar"
        android:background="@drawable/item_pressed_bg"
        android:onClick="passwordSetting"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_main_color"
            android:text="@string/balance_password_tip"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/switch_icon"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>

    <include
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_space"
        android:layout_below="@id/balance_password_setting"
        layout="@layout/item_divider" />

    <TextView
        android:id="@+id/balance_password_describe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/auto_space"
        android:layout_below="@id/balance_password_setting"
        android:text="@string/balance_password_describe"/>

    <TextView
        android:id="@+id/balance_password_change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/balance_password_describe"
        android:layout_alignParentRight="true"
        android:background="@drawable/item_transparent_pressed_bg"
        android:padding="@dimen/auto_space"
        android:onClick="changePassword"
        android:textColor="@android:color/black"
        android:text="@string/balance_password_change"/>
</RelativeLayout>